chore: improved fix for aspect ratio player on ios

--- a/src/components/VideoLayout/VideoLayout.module.scss
+++ b/src/components/VideoLayout/VideoLayout.module.scss
@@ -37,7 +37,23 @@
 }
 
 .player {
+  position: relative;
   grid-area: player;
+  aspect-ratio: 16 / 9;
+  box-shadow: 0 8px 10px rgb(0 0 0 / 14%), 0 3px 14px rgb(0 0 0 / 12%), 0 4px 5px rgb(0 0 0 / 20%);
+
+  @supports not (aspect-ratio: 16 / 9) {
+    &::after {
+      display: block;
+      content: '';
+      clear: both;
+    }
+    &::before {
+      float: left;
+      padding-top: 56.25%;
+      content: '';
+    }
+  }
 
   @include responsive.mobile-only() {
     margin: -16px -16px 0;
